--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,4 +15,7 @@ conda:
 
 python:
   install:
-    - requirements: "requirements.txt"
+    - requirements: docs/requirements.txt
+
+sphinx:
+  configuration: docs/source/conf.py
